redesigned portfolio page: removed overlay, changed badge colors, added new navbar. resolved filter search bar/dropdown content alignment issue (projects were being pushed down by dropdown; resolved by using absolute positioning and removing margins)

--- a/src/app/filters/filters.component.css
+++ b/src/app/filters/filters.component.css
@@ -132,7 +132,6 @@ ul {
   position: absolute;
   scrollbar-color: grey;
   scrollbar-width: thin;
-  width: 640px;
   z-index: 4;
 }
 
