--- a/src/app/portfolio-featured/portfolio-featured.component.css
+++ b/src/app/portfolio-featured/portfolio-featured.component.css
@@ -172,7 +172,7 @@ p {
 }
 
 .badge {
-  background-color: lightgray;
+  background-color: darkgray;
 }
 .fa-tags {
   color: lightgray;
