--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -1,4 +1,176 @@
+h1,
 h2,
+h3,
+h4,
+h5,
+h6,
+.navbar-brand,
+.nav-link { font-family: "Playfair Display"; font-style: normal; font-variant: normal;  }
+
+.nav-link {
+  color: white;
+}
+
+@media only screen and (min-width: 2560px) {
+  h1 {
+    font-size: 5rem;
+  }
+  
+  .subheading {
+    font-size: 2.5rem;
+    margin-top: 2rem;
+  }
+
+  h2 {
+    font-size: 3rem;
+  }
+
+  p {
+    font-size: 2rem;
+  }
+
+  .container-xxxl {
+    max-width: 4000px;
+  }
+
+  .card-img-top {
+    height: 12rem;
+    width: 12rem;
+  }
+
+  .card-img{
+    height: 14rem;
+    width: 14rem;
+  }
+
+  .nav-link {
+    font-size: 2rem;
+  }
+
+  .fa-github, .fa-itch-io, .fa-linkedin, .fa-envelope {
+    font-size: 4rem;
+  }
+
+  .btn-outline-light,.btn-outline-dark {
+    padding: 2em;
+  }
+}
+
+@media only screen and (max-width: 2559px) {
+  h1 {
+    font-size: 4rem;
+  }
+  
+  .subheading {
+    font-size: 2rem;
+    margin-top: 1.25rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+
+  p {
+    font-size: 1.25rem;
+  }
+
+  .container-xxxl {
+    max-width: 1824px;
+  }
+
+  .card-img-top {
+    height: 10rem;
+    width: 10rem;
+  }
+
+  .card-img{
+    height: 12rem;
+    width: 12rem;
+  }
+
+  .nav-link {
+    font-size: 1.5rem;
+  }
+
+  .fa-github, .fa-itch-io, .fa-linkedin, .fa-envelope {
+    font-size: 2rem;
+  }
+
+  .btn-outline-light,.btn-outline-dark {
+    padding: 2em;
+  }
+}
+
+@media only screen and (max-width: 1824px) {
+  h1 {
+    font-size: xx-large;
+  }
+  
+  .subheading {
+    font-size: large;
+  }
+
+  h2 {
+    font-size: large;
+  }
+
+  p {
+    font-size: large;
+  }
+
+  .card-img-top {
+    height: 6rem;
+    width: 6rem;
+  }
+
+  .card-img {
+    height: 8rem;
+    width: 8rem;
+  }
+
+  .nav-link {
+    font-size: 1.15rem;
+  }
+
+  .fa-github, .fa-itch-io, .fa-linkedin, .fa-envelope {
+    font-size: 1.5rem;
+  }
+
+  .btn-outline-light,.btn-outline-dark {
+    padding: 1.25em;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    font-size: x-large;
+  }
+  
+  .subheading {
+    font-size: 0.90rem;
+  }
+
+  h2 {
+    font-size: normal;
+  }
+
+  p {
+    font-size: small;
+  }
+  .fa-github, .fa-itch-io, .fa-linkedin, .fa-envelope {
+    font-size: 1rem;
+  }
+
+  .btn-outline-light,.btn-outline-dark {
+    padding: 1em;
+  }
+}
+
+
+.navbar {
+  background-color: black;
+}
+
 p {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI",
     Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
@@ -29,9 +201,7 @@ footer {
   font-family: sans-serif
 }
 
-.navbar {
-  background-color: white;
-}
+
 
 .navbar-nav li a {
   text-align: right;
